cleaned up some of the html, wrapped content within sections in containers rather than the sections having the container class, and other padding fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,5 +16,4 @@ h4,
 h5,
 h6 {
   font-family: var(--headingFOnt);
-  letter-spacing: 2px;
 }
